// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Break Block should render Default 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: grid;
  gap: 16px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media (min-width:900px) {
  .emotion-0 {
    grid-template-columns: 1fr 1fr;
    gap: 40px;
  }
}

.emotion-2 {
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 16px;
}

.emotion-4 {
  max-width: 100%;
  width: 100%;
  height: auto;
  aspect-ratio: auto 0.6666666666666666;
}

@media (max-width:899.95px) {
  .emotion-4 {
    aspect-ratio: 1;
  }
}

.emotion-8 {
  margin: 0;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  font-weight: 400;
  font-size: 2.125rem;
  line-height: 1.235;
  letter-spacing: 0.00735em;
}

.emotion-11 {
  margin: 0;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.5;
  letter-spacing: 0.00938em;
  margin-bottom: 0.35em;
}

.emotion-13 {
  margin: 0;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  font-weight: 500;
  font-size: 1.25rem;
  line-height: 1.6;
  letter-spacing: 0.0075em;
}

<div
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <img
        alt="DSC07717"
        class="emotion-4 emotion-5"
        loading="lazy"
        srcset="https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
        title=""
      />
    </div>
    <div
      class="emotion-2 emotion-3"
    >
      <div
        class="MuiTypography-root MuiTypography-h4 emotion-8"
        role="heading"
      >
        Break block test
      </div>
      <div
        class="emotion-9 emotion-10"
      >
        <div
          data-gramm="false"
          data-slate-editor="true"
          data-slate-node="value"
          style="outline: none; white-space: pre-wrap; word-wrap: break-word;"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-11"
            data-slate-node="element"
          >
            <span
              data-slate-node="text"
            >
              <span
                data-slate-string="true"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit
              </span>
            </span>
          </p>
          <p
            class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-11"
            data-slate-node="element"
          >
            <span
              data-slate-node="text"
            >
              <span
                data-slate-length="0"
                data-slate-zero-width="n"
              >
                ﻿
                <br />
              </span>
            </span>
          </p>
          <h4
            class="MuiTypography-root MuiTypography-h6 emotion-13"
            data-slate-node="element"
          >
            <span
              data-slate-node="text"
            >
              <span
                data-slate-string="true"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit
              </span>
            </span>
          </h4>
          <h4
            class="MuiTypography-root MuiTypography-h6 emotion-13"
            data-slate-node="element"
          >
            <span
              data-slate-node="text"
            >
              <span
                data-slate-length="0"
                data-slate-zero-width="n"
              >
                ﻿
                <br />
              </span>
            </span>
          </h4>
          <p
            class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-11"
            data-slate-node="element"
          >
            <span
              data-slate-node="text"
            >
              <em
                data-slate-leaf="true"
              >
                <strong
                  data-slate-leaf="true"
                >
                  <span
                    data-slate-string="true"
                  >
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                  </span>
                </strong>
              </em>
            </span>
            <span
              data-slate-node="text"
            >
              <em
                data-slate-leaf="true"
              >
                <span
                  data-slate-string="true"
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit
                </span>
              </em>
            </span>
            <span
              data-slate-node="text"
            >
              <u
                data-slate-leaf="true"
              >
                <em
                  data-slate-leaf="true"
                >
                  <span
                    data-slate-string="true"
                  >
                    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                  </span>
                </em>
              </u>
            </span>
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Break Block should render ImageRight 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -1,11 +1,11 @@
  <DocumentFragment>
    <div
      class="css-1k98guj-BreakBlockWrapper e11xbw3q1"
    >
      <div
-       class="css-ywr472-BreakBlockSegment e11xbw3q0"
+       class="css-17wr6dm-BreakBlockSegment e11xbw3q0"
      >
        <img
          alt="DSC07717"
          class="css-16m3onx-ImageWrapper-BreakBlock e1shv2yg0"
          loading="lazy""
`;

exports[`Break Block should render WithButton 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -146,8 +146,18 @@
                </u>
              </span>
            </p>
          </div>
        </div>
+       <a
+         class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedSecondary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root MuiButton-contained MuiButton-containedSecondary MuiButton-sizeMedium MuiButton-containedSizeMedium css-xzjkiw-MuiTypography-root-MuiLink-root-MuiButtonBase-root-MuiButton-root"
+         href="Link URL"
+         tabindex="0"
+       >
+         Link Text
+         <span
+           class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
+         />
+       </a>
      </div>
    </div>
  </DocumentFragment>"
`;

exports[`Break Block should render WithClassName 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -1,8 +1,8 @@
  <DocumentFragment>
    <div
-     class="css-1k98guj-BreakBlockWrapper e11xbw3q1"
+     class="extra-classname css-1k98guj-BreakBlockWrapper e11xbw3q1"
    >
      <div
        class="css-ywr472-BreakBlockSegment e11xbw3q0"
      >
        <img"
`;

exports[`Break Block should render WithEmotion 1`] = `
"Snapshot Diff:
Compared values have no visual difference."
`;

exports[`Break Block should render WithoutImage 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -3,30 +3,20 @@
      class="css-1k98guj-BreakBlockWrapper e11xbw3q1"
    >
      <div
        class="css-ywr472-BreakBlockSegment e11xbw3q0"
      >
-       <img
-         alt="DSC07717"
-         class="css-16m3onx-ImageWrapper-BreakBlock e1shv2yg0"
-         loading="lazy"
-         srcset="https://unsplash.it/800/400 800w,
- https://unsplash.it/500/300 500w,
- https://unsplash.it/300/200 300w,
- https://unsplash.it/200/100 200w"
-         title=""
-       />
-     </div>
-     <div
-       class="css-ywr472-BreakBlockSegment e11xbw3q0"
-     >
        <div
          class="MuiTypography-root MuiTypography-h4 css-5lbw0b-MuiTypography-root"
          role="heading"
        >
          Break block test
+       </div>
      </div>
+     <div
+       class="css-ywr472-BreakBlockSegment e11xbw3q0"
+     >
        <div
          class="css-1v4yto8-RichTextBlockWrapper eu4zjs90"
        >
          <div
            data-gramm="false""
`;

exports[`Break Block should render WithoutImageRight 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -1,32 +1,22 @@
  <DocumentFragment>
    <div
      class="css-1k98guj-BreakBlockWrapper e11xbw3q1"
    >
      <div
-       class="css-ywr472-BreakBlockSegment e11xbw3q0"
-     >
-       <img
-         alt="DSC07717"
-         class="css-16m3onx-ImageWrapper-BreakBlock e1shv2yg0"
-         loading="lazy"
-         srcset="https://unsplash.it/800/400 800w,
- https://unsplash.it/500/300 500w,
- https://unsplash.it/300/200 300w,
- https://unsplash.it/200/100 200w"
-         title=""
-       />
-     </div>
-     <div
-       class="css-ywr472-BreakBlockSegment e11xbw3q0"
+       class="css-17wr6dm-BreakBlockSegment e11xbw3q0"
      >
        <div
          class="MuiTypography-root MuiTypography-h4 css-5lbw0b-MuiTypography-root"
          role="heading"
        >
          Break block test
        </div>
+     </div>
+     <div
+       class="css-ywr472-BreakBlockSegment e11xbw3q0"
+     >
        <div
          class="css-1v4yto8-RichTextBlockWrapper eu4zjs90"
        >
          <div
            data-gramm="false""
`;
